<resources>
    <string name="app_name" translatable="false">Tower\'INT</string>
    <string name="startString"><b>Démarrer</b></string>
    <string name="tutorialString"><b>Tutoriel</b></string>
    <string name="optionsString"><b>Options</b></string>
    <string name="exitString"><b>Quitter</b></string>
    <string name="background_image_description" translatable="false">background Image</string>
    <string name="option_menu_title"><b>Options</b></string>
    <string name="options_menu_background_description" translatable="false">options_menu_background</string>
    <string name="return_string"><b>&lt;Retour</b></string>
    <string name="music_button">Musique</string>
    <string name="bruitages_button">Bruitages</string>
    <string name="rules_button">Règles</string>
    <string name="interface_button">Interface</string>
    <string name="towers_button">Tours</string>
    <string name="attackers_button">Attaquants</string>
    <string name="no_save_found">Aucun score sauvé</string>
    <string name="reset_string">Effacer scores</string>
    <string name="save_score_title">Sauvegarde du score</string>
    <string name="username_prompt">Entrez votre nom:</string>
    <string name="skip_save_score">Ignorer</string>
    <string name="rules_content"> "Le but du jeu est d’empêcher une vague d\'attaquant d\'arriver jusqu\'à la fin du chemin.
L\'argent sert a poser des tours qui servent à tirer sur les attaquants.
On gagne de l\'argent et des points à chaque fois que l\'on élimine des attaquants.
Une fois une vague d\’ennemie détruite, on passe à la suivante tout en conservant l\'argent et les points gagnés.
Les vagues continuent à se succéder jusqu\'à ce qu'il y est une défaite."
 </string>
    <string name="interface_content"> "L\'interface est assez simple en haut il y a le nombre d\’attaquants arrivés jusqu'à nous, l\'argent, le score et un bouton pause.
En bas les boutons pour poser les tours (on clique sur la tour puis la ou on veut la poser), un bouton menu.
On a en plus un bouton pour recommencer ou passer au niveau suivant qui apparaît si on perd ou on gagne le niveau."</string>
    <string name="towers_content">" Les tours sont fait pour attaquer les attaquants on peut les poser avant ou après le début du match.
Néanmoins on ne peut pas poser une tour sur une autre tour ou bien sur le chemin.
Il y a 3 types de tours dans ce jeu.
Il y a la tour verte à 100 dollars.
Il y a la tour rouge à 300 dollars qui fait beaucoup plus de dégats que la verte mais qui est aussi plus lente.
Il y a la tour de glace à 250 dollars qui ne fait aucun dégât mais qui ralentit les ennemis."</string>
    <string name="attackers_content">" Les attaquants apparaissent en haut de l\'écran et suivent le chemin jusqu'à la fin.
Il y a 3 types d\'attaquants dans ce jeu.
Il y a l\'attaquant de base vert.
Il y a l\'attaquant gris plus lent mais plus résistant.
Il y a l\'attaquant marron plus rapide que les deux autres."</string>
    <string name="scoreString"><b>Score</b></string>

</resources>
